// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Content card examples > Clickable content card should render correctly 1`] = `
<div>
  <button
    class="v-content-card v-content-card-clickable"
  >
    <span
      class="v-content-card-body v-align-items-start v-flex v-flex-col v-gap-4"
    >
      <span
        class="v-typography-headline-4 v-content-card-title"
      >
        Headline
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-icon-move"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </span>
      <span
        class="v-typography-subtitle-3 v-content-card-subtitle"
      >
        Subtitle
      </span>
      <span
        class="v-pt-4"
      >
        This is optional text that describes the headline in more detail.
      </span>
    </span>
  </button>
</div>
`;

exports[`Content card examples > Compact content card should render correctly 1`] = `
<div>
  <div
    class="v-content-card v-content-card-border-block-end"
  >
    <div
      class="v-content-card-body v-flex v-flex-col v-gap-10"
    >
      <h3
        class="v-typography-headline-4 v-content-card-title"
      >
        Headline
      </h3>
      <h4
        class="v-typography-body-2 v-content-card-subtitle v-pt-4"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </h4>
      <div
        class="v-pt-12"
      >
        <a
          class="v-link v-link-no-underline"
          href="./content-card"
        >
          Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples > Compact dashboard content card should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
  >
    <div
      class="v-content-card-body v-flex v-flex-col v-gap-4"
    >
      <div
        class="v-align-items-center v-flex v-flex-row v-justify-content-between"
      >
        <h3
          class="v-typography-headline-4 v-content-card-title"
        >
          Headline
        </h3>
      </div>
      <p
        class="v-pt-4"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-align-items-center v-flex v-flex-wrap v-gap-16 v-pt-12"
      >
        <p
          class="v-typography-display-2"
          style="color: var(--palette-messaging-text-positive);"
        >
          0,000
        </p>
        <div
          class="v-align-content-end v-align-items-center v-flex v-flex-col v-gap-4 v-mt-8"
        >
          <svg
            aria-hidden="false"
            aria-labelledby="compact-dashboard-content-card-trend-title compact-dashboard-content-card-trend-label"
            class="v-icon v-icon-visa v-icon-tiny v-icon-arrow-up"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="compact-dashboard-content-card-trend-title"
            >
              Increasing value
            </title>
            <path
              class="v-icon-primary"
              d="M15.7041 7.79736L14.29 9.21143L8.99704 3.91846V16.0044H6.99704V3.91846L1.70407 9.21143L0.290009 7.79736L7.99704 0.090332L15.7041 7.79736Z"
            />
            <defs>
              <clippath>
                <rect
                  height="16"
                  transform="translate(0 0.000488281)"
                  width="16"
                />
              </clippath>
            </defs>
          </svg>
          <p
            aria-hidden="true"
            id="compact-dashboard-content-card-trend-label"
          >
            Label
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples > Content card with UI buttons should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
  >
    <div
      class="v-content-card-body v-flex v-flex-col v-gap-4"
    >
      <div
        class="v-align-items-center v-flex v-flex-row v-justify-content-between"
      >
        <h3
          class="v-typography-headline-4 v-content-card-title"
        >
          Headline
        </h3>
        <button
          aria-label="Export [Headline]"
          class="v-button v-button-small v-button-tertiary v-button-icon"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-file-upload"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M2 14H14V10H16V16H0V10H2V14Z"
            />
            <path
              class="v-icon-primary"
              d="M8.71289 0.723633L12.501 4.57031L11.0762 5.97363L9.00098 3.86621V12.0039H7.00098V3.86621L4.9248 5.97363L3.5 4.57031L7.28809 0.723633L8.00098 0L8.71289 0.723633Z"
            />
          </svg>
        </button>
      </div>
      <h4
        class="v-typography-subtitle-3 v-content-card-subtitle"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-align-items-center v-flex v-flex-wrap v-gap-16 v-pt-12"
      >
        <button
          class="v-button"
        >
          Primary action
        </button>
        <a
          class="v-link v-link-no-underline"
          href="./content-card"
        >
          Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples > Content card with category should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
  >
    <div
      class="v-content-card-body v-flex v-flex-col v-gap-4"
    >
      <div
        class="v-align-items-center v-flex v-gap-6 v-pb-8"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-low v-icon-account"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
          />
          <path
            class="v-icon-primary"
            d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
          />
        </svg>
        <h3
          class="v-typography-overline"
          style="color: var(--palette-default-active);"
        >
          Category
        </h3>
      </div>
      <h4
        class="v-typography-headline-4 v-content-card-title"
      >
        Headline
      </h4>
      <h5
        class="v-typography-subtitle-3 v-content-card-subtitle"
      >
        Subtitle
      </h5>
      <p
        class="v-pt-4"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-align-items-center v-flex v-gap-16 v-pt-12"
      >
        <button
          class="v-button"
        >
          Primary action
        </button>
        <a
          class="v-link v-link-no-underline"
          href="./content-card"
        >
          Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples > Content card with icon should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
  >
    <div
      class="v-content-card-body v-flex v-flex-col v-gap-4"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-high v-icon-security-lock v-pb-12"
        focusable="false"
        height="48"
        viewBox="0 0 48 48"
        width="48"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-secondary"
          d="M24 25C26.7614 25 29 27.2386 29 30C29 31.4482 28.3843 32.7529 27.4004 33.666L29 40H19L20.5996 33.666C19.6157 32.7529 19 31.4482 19 30C19 27.2386 21.2386 25 24 25ZM24 27C22.3431 27 21 28.3431 21 30C21 30.869 21.3668 31.6497 21.96 32.2002L22.8291 33.0059L21.5674 38H26.4326L25.1709 33.0059L26.04 32.2002C26.6332 31.6497 27 30.869 27 30C27 28.3431 25.6569 27 24 27Z"
        />
        <path
          class="v-icon-primary"
          d="M24 0C30.6274 0 36 5.37258 36 12V16H42V48H6V16H12V12C12 5.37258 17.3726 0 24 0ZM8 21H13V23H8V26H13V28H8V31H13V33H8V36H13V38H8V41H13V43H8V46H40V18H8V21ZM24 2C18.4772 2 14 6.47715 14 12V16H16V12C16 7.58172 19.5817 4 24 4C28.4183 4 32 7.58172 32 12V16H34V12C34 6.47715 29.5228 2 24 2ZM24 6C20.6863 6 18 8.68629 18 12V16H30V12C30 8.68629 27.3137 6 24 6Z"
        />
      </svg>
      <h3
        class="v-typography-headline-4 v-content-card-title"
      >
        Headline
      </h3>
      <hr
        class="v-divider"
      />
      <p
        class="v-pt-4"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-pt-12"
      >
        <a
          class="v-link v-link-no-underline"
          href="./content-card"
        >
          Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples > Content card with image should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
    style="inline-size: 50vw;"
  >
    <img
      alt=""
      class="v-content-card-image"
      src="https://www.url.com/content-card-image.png"
      style="block-size: auto; inline-size: 100%; object-fit: contain; overflow: hidden;"
    />
    <div
      class="v-content-card-body v-flex v-flex-col v-gap-4"
    >
      <h3
        class="v-typography-headline-4 v-content-card-title"
      >
        Headline
      </h3>
      <h4
        class="v-typography-subtitle-3 v-content-card-subtitle"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-align-items-center v-flex v-flex-wrap v-gap-16 v-pt-12"
      >
        <button
          class="v-button"
        >
          Primary action
        </button>
        <a
          class="v-link v-link-no-underline"
          href="./content-card"
        >
          Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples > Default content card should render correctly 1`] = `
<div>
  <div
    class="v-content-card"
  >
    <div
      class="v-content-card-body v-flex v-flex-col v-gap-4"
    >
      <h3
        class="v-typography-headline-4 v-content-card-title"
      >
        Headline
      </h3>
      <h4
        class="v-typography-subtitle-3 v-content-card-subtitle"
      >
        Subtitle
      </h4>
      <p
        class="v-pt-4"
      >
        This is optional text that describes the headline and subtitle in more detail.
      </p>
      <div
        class="v-align-items-center v-flex v-flex-wrap v-gap-16 v-pt-12"
      >
        <button
          class="v-button"
        >
          Primary action
        </button>
        <a
          class="v-link v-link-no-underline"
          href="./content-card"
        >
          Destination label 
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Content card examples > Disabled clickable content card should render correctly 1`] = `
<div>
  <button
    aria-disabled="true"
    class="v-content-card v-content-card-clickable"
  >
    <div
      class="v-content-card-body v-flex v-flex-col v-gap-4"
    >
      <div
        class="v-align-items-center v-flex v-gap-12"
      >
        <span
          class="v-typography-headline-4 v-content-card-title"
        >
          Headline
        </span>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-security-lock"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M9 11.9961H7V8.99609H9V11.9961Z"
          />
          <path
            class="v-icon-primary"
            d="M8 0C10.2091 0 12 1.79086 12 4V5H15V16H1V5H4V4C4 1.79086 5.79086 0 8 0ZM3 14H13V7H3V14ZM8 2C6.89543 2 6 2.89543 6 4V5H10V4C10 2.89543 9.10457 2 8 2Z"
          />
        </svg>
      </div>
      <span
        class="v-typography-subtitle-3 v-content-card-subtitle"
      >
        Subtitle
      </span>
      <span
        class="v-pt-4"
      >
        This is optional text that describes the headline in more detail.
      </span>
    </div>
  </button>
</div>
`;
